# py_web_HW09

./: 1.py  1212.py  README.md  bs.py  config.ini  connect.py  lesson9_1.py  main.py  models.py  pyproject.toml  quotes.json  quotes1.json  quotes2.json  seeds.py
JSON/: authors.json  quotes.json
beautifulsoup/: main.py  main_text.py
test_hw09/: pyproject.toml
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: authors.py
