[tool.poetry]
name = "test-hw09"
version = "0.1.0"
description = ""
authors = ["Artem Dorofeev <a.dorofeev@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
